if (NOT ( (FREERTOS_PLUS_TCP_NETWORK_IF STREQUAL "RX") ) )
    return()
endif()

#------------------------------------------------------------------------------
add_library( freertos_plus_tcp_network_if STATIC )

# TODO What about BufferAllocation_2.c here?
target_sources( freertos_plus_tcp_network_if
  PRIVATE
    ether_callback.c
    NetworkInterface.c
)

target_link_libraries( freertos_plus_tcp_network_if
  PUBLIC
    freertos_plus_tcp_port
    freertos_plus_tcp_network_if_common
  PRIVATE
    freertos_kernel
    freertos_plus_tcp
)
